Ukonczenie landing page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
                 <!--<a href="#" class="right dropdown-button" data-activates="slide-out"><i id="nav-button" class="large material-icons">dehaze</i></a>-->
                 <a href="#" data-activates="slide-out" class="button-collapse right"><i class="material-icons">menu</i></a>
+                <ul class="right navigation">
+                    <li><a href="#">Link1</a></li>
+                    <li><a href="#">Link2</a></li>
+                    <li><a href="#">Link3</a></li>
+                </ul>
                 <ul id="slide-out" class="side-nav">
                     <li>
                         <div class="nav-header">
@@ -93,7 +98,7 @@
                 var that = this;
                 setTimeout(function () {
                     $(that).css('top', '0');
-                }, 200 * (index + 1));
+                }, 80 * (index + 1));
 
             });
         }, 100);
