Rozpoczecie prac nad druga sekcja

--- a/index.html
+++ b/index.html
@@ -78,8 +78,27 @@
         </div>
     </div>
 </section>
-<section id="test">
+<section id="responsive-design">
+    <div class="mobile">
+        <div class="mobile-screen">
+            <div class="mobile-content">
+                <div class="mobile-nav"></div>
+                <div class="mobile-block"></div>
+                <div class="mobile-block"></div>
+                <div class="mobile-block"></div>
+                <div class="mobile-block"></div>
+            </div>
+        </div>
+    </div>
+    <div class="tablet">
+        <div class="tablet-screen">
+            <div class="tablet-content">
+                <div class="tablet-nav">
 
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
