--- a/index.html
+++ b/index.html
@@ -93,8 +93,32 @@
     <div class="tablet">
         <div class="tablet-screen">
             <div class="tablet-content">
-                <div class="tablet-nav">
+                <div class="tablet-nav"></div>
+                <div class="tablet-wrapper">
+                    <div class="tablet-block"></div>
+                    <div class="tablet-block"></div>
+                    <div class="tablet-block"></div>
+                    <div class="tablet-block"></div>
+                    <div class="tablet-block"></div>
+                    <div class="tablet-block"></div>
+                    <div class="tablet-block"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="desktop">
+        <div class="desktop-screen">
+            <div class="desktop-content">
+                <div class="desktop-nav">
+                    <div class="desktop-wrapper">
+                        <div class="first-row">
+                            <div class="left-column">
+                                <div class="desktop-block"></div>
+                            </div>
+                            <div class="right-column"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
