--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
             </div>
         </div>
         <div class="rwd-description container">
-            <h1>Strona dostosowana na każde urządzenie</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda atque aut autem cum cupiditate doloremque, est exercitationem id ipsam laboriosam nobis perspiciatis quam repellat repellendus sapiente suscipit voluptas voluptate.</p>
+            <div class="rwd-description-wrapper">
+                <h1>Strona dostosowana na każde urządzenie</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda atque aut autem cum cupiditate doloremque, est exercitationem id ipsam laboriosam nobis perspiciatis quam repellat repellendus sapiente suscipit voluptas voluptate.</p>
+            </div>
         </div>
 
     </section>
