Ukonczenie sekcji RWD animation

--- a/index.html
+++ b/index.html
@@ -164,10 +164,12 @@
         </div>
         <div class="rwd-description container">
             <div class="rwd-description-wrapper">
-                <h1>Strona dostosowana na każde urządzenie</h1>
+                <h1>Responsywny design</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda atque aut autem cum cupiditate doloremque, est exercitationem id ipsam laboriosam nobis perspiciatis quam repellat repellendus sapiente suscipit voluptas voluptate.</p>
             </div>
         </div>
+    </section>
+    <section id="technology">
 
     </section>
 
