Dodanie sekcji technology (wstepne ukonczenie responsywnosci)

--- a/index.html
+++ b/index.html
@@ -170,7 +170,21 @@
         </div>
     </section>
     <section id="technology">
-
+        <div class="technology-wrapper">
+            <i class="fa fa-chrome fa-3x" aria-hidden="true"></i>
+            <h2>Obsługa najnowszych przeglądarek</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ducimus fugit maiores provident unde vero voluptas.</p>
+        </div>
+        <div class="technology-wrapper">
+            <i class="fa fa-html5 fa-3x" aria-hidden="true"></i>
+            <h2>Użycie najnowszych technologii</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ducimus fugit maiores provident unde vero voluptas.</p>
+        </div>
+        <div class="technology-wrapper">
+            <i class="fa fa-wordpress fa-3x" aria-hidden="true"></i>
+            <h2>Możliwość podpięcia CMS'a</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ducimus fugit maiores provident unde vero voluptas.</p>
+        </div>
     </section>
 
 </div>
