--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
-    <link rel="stylesheet" href="css/style.css">
-    <title>title</title>
+    <link rel="stylesheet" href="build/style.css">
+    <title>Ver1.0.0</title>
 
 </head>
 <body>
